@@ -2,23 +2,24 @@ package com.nlnk.AnalysisOfAlgorithms.cloud;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class OptimalFourSumTest {
-    private final OptimalFourSum solution = new OptimalFourSum();
-
-    private void assertQuadrupletsEqual(List<List<Integer>> expected, List<List<Integer>> actual) {
+    private void assertQuadrupletsEqual(
+            List<List<Integer>> expected, List<List<Integer>> actual
+    ) {
         // 1. Check size first for quick failure
-        assertEquals(expected.size(), actual.size(), "The number of unique quadruplets found is incorrect.");
+        assertEquals(expected.size(), actual.size());
 
         // 2. Sort all inner lists and the outer list for canonical comparison
-        expected.forEach(quad -> quad.sort(Integer::compare));
-        actual.forEach(quad -> quad.sort(Integer::compare));
+        expected.forEach(Collections::sort);
+        actual.forEach(Collections::sort);
 
-        // This sorting is safe because the problem requires unique SETS of values.
         expected.sort((a, b) -> {
             for (int i = 0; i < 4; i++) {
                 int cmp = a.get(i).compareTo(b.get(i));
@@ -37,7 +38,7 @@ public class OptimalFourSumTest {
             return 0;
         });
 
-        assertEquals(expected, actual, "The set of unique quadruplets does not match the expected set.");
+        assertEquals(expected, actual);
     }
 
     // --- Standard Cases ---
@@ -46,12 +47,12 @@ public class OptimalFourSumTest {
     void test01_standardCase_multipleSolutions() {
         int[] nums = {1, 0, -1, 0, -2, 2};
         int target = 0;
-        List<List<Integer>> expected = List.of(
+        List<List<Integer>> expected = new ArrayList<>(List.of(
                 Arrays.asList(-2, -1, 1, 2),
                 Arrays.asList(-2, 0, 0, 2),
                 Arrays.asList(-1, 0, 0, 1)
-        );
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        ));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 
     // --- Edge Cases and Constraints ---
@@ -61,15 +62,15 @@ public class OptimalFourSumTest {
         // Must have at least 4 elements
         int[] nums = {1, 2, 3};
         int target = 6;
-        assertTrue(solution.fourSum(nums, target).isEmpty(), "Should return an empty list if array size is less than 4.");
+        assertTrue(OptimalFourSum.fourSum(nums, target).isEmpty());
     }
 
     @Test
-    void test03_noSolution_largeTarget() {
+    void test03_noOptimalFourSum_largeTarget() {
         // Target is mathematically impossible to reach
         int[] nums = {1, 2, 3, 4, 5};
         int target = 100;
-        assertTrue(solution.fourSum(nums, target).isEmpty(), "Should return an empty list when no solution exists.");
+        assertTrue(OptimalFourSum.fourSum(nums, target).isEmpty());
     }
 
     @Test
@@ -77,7 +78,7 @@ public class OptimalFourSumTest {
         // Tests algorithm's early pruning logic (if implemented)
         int[] nums = {10, 10, 10, 10, 1, 2};
         int target = 5;
-        assertTrue(solution.fourSum(nums, target).isEmpty(), "Should return an empty list when minimum four elements exceed target.");
+        assertTrue(OptimalFourSum.fourSum(nums, target).isEmpty());
     }
 
     @Test
@@ -85,8 +86,8 @@ public class OptimalFourSumTest {
         // Edge case: array size is exactly 4
         int[] nums = {2, 3, 4, 5};
         int target = 14;
-        List<List<Integer>> expected = List.of(Arrays.asList(2, 3, 4, 5));
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        List<List<Integer>> expected = new ArrayList<>(List.of(Arrays.asList(2, 3, 4, 5)));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 
     // --- Duplicate Handling Cases (Most Important) ---
@@ -96,8 +97,8 @@ public class OptimalFourSumTest {
         // Critical test: ensures only one unique set is found
         int[] nums = {2, 2, 2, 2, 2, 2, 2};
         int target = 8;
-        List<List<Integer>> expected = List.of(Arrays.asList(2, 2, 2, 2));
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        List<List<Integer>> expected = new ArrayList<>(List.of(Arrays.asList(2, 2, 2, 2)));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 
     @Test
@@ -105,8 +106,8 @@ public class OptimalFourSumTest {
         // Simple case for zeroes and duplicates
         int[] nums = {0, 0, 0, 0};
         int target = 0;
-        List<List<Integer>> expected = List.of(Arrays.asList(0, 0, 0, 0));
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        List<List<Integer>> expected = new ArrayList<>(List.of(Arrays.asList(0, 0, 0, 0)));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 
     @Test
@@ -114,13 +115,13 @@ public class OptimalFourSumTest {
         // Tests handling of a large negative target and negative-only components.
         int[] nums = {-5, -4, -3, -2, -1, 0, 1};
         int target = -10;
-        List<List<Integer>> expected = List.of(
+        List<List<Integer>> expected = new ArrayList<>(List.of(
                 Arrays.asList(-5, -4, -2, 1),
                 Arrays.asList(-5, -4, -1, 0),
                 Arrays.asList(-5, -3, -2, 0),
                 Arrays.asList(-4, -3, -2, -1)
-        );
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        ));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 
     @Test
@@ -128,14 +129,15 @@ public class OptimalFourSumTest {
         // Comprehensive test for duplicate skipping in all nested loops
         int[] nums = {-1, 0, 0, 1, 1, 2, 2, 3, 3, 4};
         int target = 4;
-        List<List<Integer>> expected = List.of(
+        List<List<Integer>> expected = new ArrayList<>(List.of(
+                Arrays.asList(-1, 0, 1, 4), // -1 + 0 + 1 + 4 = 4
                 Arrays.asList(-1, 0, 2, 3), // -1 + 0 + 2 + 3 = 4
                 Arrays.asList(-1, 1, 1, 3), // -1 + 1 + 1 + 3 = 4
                 Arrays.asList(-1, 1, 2, 2), // -1 + 1 + 2 + 2 = 4
                 Arrays.asList(0, 0, 1, 3),  // 0 + 0 + 1 + 3 = 4
                 Arrays.asList(0, 0, 2, 2),  // 0 + 0 + 2 + 2 = 4
                 Arrays.asList(0, 1, 1, 2)   // 0 + 1 + 1 + 2 = 4
-        );
-        assertQuadrupletsEqual(expected, solution.fourSum(nums, target));
+        ));
+        assertQuadrupletsEqual(expected, OptimalFourSum.fourSum(nums, target));
     }
 }
